radix-transactions/tests/assets/manifest_generator_error_invalid_ast_value_4.diag
error: expected NonFungibleLocalId, found U32
   |
 1 | CALL_METHOD Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh") "withdraw" Address("resource_sim1tknxxxxxxxxxradxrdxxxxxxxxx009923554798xxxxxxxxxakj8n3") Decimal("5.0");
 2 | 
 3 | # Create a proof from bucket, clone it and drop both
 4 | TAKE_ALL_FROM_WORKTOP Address("resource_sim1tknxxxxxxxxxradxrdxxxxxxxxx009923554798xxxxxxxxxakj8n3") Bucket("some_xrd");
 5 | CREATE_PROOF_FROM_BUCKET_OF_AMOUNT Bucket("some_xrd") Decimal("1") Proof("proof1a");
 6 | CREATE_PROOF_FROM_BUCKET_OF_NON_FUNGIBLES Bucket("some_xrd") Array<NonFungibleLocalId>(1u32) Proof("proof1b");
   |                                                                                        ^^^^ expected NonFungibleLocalId
 7 | CREATE_PROOF_FROM_BUCKET_OF_ALL Bucket("some_xrd") Proof("proof1c");
 8 | CLONE_PROOF Proof("proof1c") Proof("proof1d");
 9 | DROP_PROOF Proof("proof1d");
10 | DROP_PROOF Proof("proof1c");
11 | DROP_AUTH_ZONE_PROOFS;
   |